--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/irfanusuf/photogram#readme",
   "dependencies": {
-    "nodemon": "^2.0.22"
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3",
+    "nodemon": "^2.0.22",
+    "path": "^0.12.7"
   }
 }
